# semantic-version-parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
test-input/: versions.txt
