[package]
name = "semantic-version-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
itertools = "0.12.1"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
